# rrr-homeworks

./: Cargo.toml  makefile  readme.md
.github/workflows/: rust.yml
docs/module1/: run_build_test_mod1.mk
docs/module2/: quotes_stream.md  release_notes.md  run_build_test_mod2.mk
rr-file-processor/src/: main.rs
rr-parser-lib/src/: parser.rs
rr-parser-lib/src/parser/: errors.rs  render.rs  sup_camp053.rs  sup_extra_fin_csv.rs  sup_mt940.rs  tests.rs
streaming_quotes_project/: Cargo.toml  readme.md
streaming_quotes_project/bins/quote_client/: main.rs
streaming_quotes_project/bins/quote_server/: main.rs
streaming_quotes_project/examples/: demo_features.rs
streaming_quotes_project/src/: errors.rs  lib.rs  logging.rs  metrics.rs  sender.rs
streaming_quotes_project/tests/: integration.rs  test_quotes.lst
