[package]
name = "streaming_quotes_project"
version = "0.1.0"
edition = "2024"

[features]
default = ["random"]   # Фичи по умолчанию
random =  ["dep:rand"] # Фича random включает опциональную зависимость rand
sqlite = []            # Пример дополнительной фичи

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = { version = "0.8", optional = true }  # Опциональная зависимость
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "quote_client"
path = "bins/quote_client/main.rs"

[[bin]]
name = "quote_server"
path = "bins/quote_server/main.rs"
